--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-inverse navbar-default" role="navigation">
+
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container">
 
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -8,6 +10,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <%link_to "Pinteresting", root_path, class: "navbar-brand" %>
     <a class="navbar-brand" href="#">Pinteresting</a>
   </div>
 
@@ -18,4 +21,5 @@
       <li><%= link_to "About", about_path %></li> 
     </ul>
   </div><!-- /.navbar-collapse -->
+  </div>
 </nav>
