--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 <h1>Welcome to Tim's Rails Learning Experience</h1>
-<p>Click here to <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>.
+<%= link_to "Login", "#", class: "btn btn-default" %>
+<%= link_to "Sign up", "#", class: "btn btn-primary" %>
 </div>
